syntax = "proto3";

package service;

// Key-Value Service

service KeyValue {
  rpc ReadKeyValue (KeyValueReadRequest) returns (KeyValueReadResponse) {}
  rpc WriteKeyValue (KeyValueWriteRequest) returns (KeyValueWriteResponse) {}
}

enum Status {
  OK = 0;
  ERROR_KEY_NOT_FOUND = 1;
  ERROR_INTERNAL = 2;
};

message KeyValueItem {
  string key = 1;
  oneof value {
    string string_value = 2;
    int32 int_value = 3;
  }
}

message KeyValueReadRequest {
  repeated string keys = 1;
}

message KeyValueReadResponse {
  repeated KeyValueItem items = 1;
  Status status = 2;
}

message KeyValueWriteRequest {
  repeated KeyValueItem items = 1;
}

message KeyValueWriteResponse {
  Status status = 1;
}

// Measurement service

service Measurement {
  rpc ReadMeasurement (MeasurementRequest) returns (MeasurementResponse) {}
  rpc ReadMeasurements (MeasurementRequest) returns (stream MeasurementResponse) {}
}

message MeasurementRequest {}

message MeasurementResponse {
  float data = 1;
  int32 counter = 2;
}
